# gpt-caller-rust

./: Cargo.toml  input.txt
src/: main.rs
