[package]
name = "gpt-caller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"]}
tokio = { version = "1.28.0", features = ["full"]}
async-trait = "0.1.68"
serde = { version = "1.0.160", features = ["derive"]}